# ServiceMatrix

./: .env.example  .gitattributes  .gitignore  .markdownlint.json  CLAUDE.md  DEVELOPMENT_ROADMAP.md  Dockerfile  Makefile  README.md  SERVICEMATRIX_CHARTER.md  SERVICEMATRIXシステムdocsフォルダ構成（完全版）.md  alembic.ini  docker-compose.prod.yml  docker-compose.sentinel.yml  docker-compose.test.yml  docker-compose.yml  pyproject.toml  run-claude.sh
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  change_request.md  feature_request.md  incident_report.md  security_vulnerability.md
.github/workflows/: ci.yml  e2e.yml  pr-governance.yml  sdk-update.yml  security.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_indexes.py  002_add_sla_breached_at.py  003_add_ai_triage_notes.py  004_fix_ci_relationships.py  005_add_notification_settings.py  005_add_tenant_table.py  006_add_incident_comments.py  006_add_tenants_table.py  007_add_closed_status_to_changes.py  008_add_department_fields.py  009_add_linked_problem_to_incidents.py  010_add_service_catalog.py  011_add_integration_configs.py  012_add_maintenance_windows.py  013_add_github_issue_number.py  014_add_performance_indexes.py  015_add_webhook_configs.py  016_add_pgvector_search.py  017_add_integration_sync_log.py  018_add_tenants_table.py  019_add_sso_providers.py  020_add_performance_indexes.py  021_add_feature_flags.py
docker/redis/: sentinel.conf
docs/: MIGRATION_GUIDE.md  SETUP.md  TERRAFORM_GUIDE.md
docs/00_foundation/: RACI_MATRIX.md  SERVICEMATRIX_CHARTER.md  STRATEGIC_OBJECTIVES.md  TERMINOLOGY_DEFINITIONS.md  VISION_AND_MISSION.md
docs/01_governance/: APPROVAL_CONTROL_MODEL.md  CHANGE_AUTHORITY_STRUCTURE.md  GOVERNANCE_MODEL.md  POLICY_FRAMEWORK.md  SEGREGATION_OF_DUTIES.md  STATE_TRANSITION_MODEL.md
docs/02_architecture/: EVENT_FLOW_ARCHITECTURE.md  LOGICAL_ARCHITECTURE.md  PHYSICAL_ARCHITECTURE.md  SCALABILITY_MODEL.md  SERVICE_INTERACTION_DIAGRAM.md  SYSTEM_ARCHITECTURE_OVERVIEW.md
docs/03_process/: CHANGE_MANAGEMENT_MODEL.md  ESCALATION_MODEL.md  INCIDENT_MANAGEMENT_MODEL.md  PRIORITY_MATRIX.md  PROBLEM_MANAGEMENT_MODEL.md  RELEASE_MANAGEMENT_MODEL.md  REQUEST_MANAGEMENT_MODEL.md
docs/04_agents_ai/: AGENT_TEAMS_STRUCTURE.md  AI_AUTONOMY_LEVEL_MATRIX.md  AI_DECISION_LOGGING_MODEL.md  AI_GOVERNANCE_POLICY.md  AUTO_REPAIR_CONTROL_MODEL.md  SUBAGENT_ROLE_DEFINITION.md
docs/05_devops/: BRANCH_STRATEGY.md  CI_CD_PIPELINE_ARCHITECTURE.md  CI_SELF_HEALING_LOOP.md  ENVIRONMENT_STRATEGY.md  ISSUE_WORKFLOW_DEFINITION.md  PULL_REQUEST_POLICY.md  REPOSITORY_STRUCTURE_GUIDELINES.md  WORKTREE_STRATEGY.md
docs/06_security_compliance/: ACCESS_CONTROL_MODEL.md  AUDIT_LOG_RETENTION_POLICY.md  DATA_PROTECTION_POLICY.md  INTERNAL_CONTROL_JSOX_MAPPING.md  ISO20000_ALIGNMENT.md  PRIVILEGED_ACCESS_POLICY.md  RBAC_DEFINITION.md
docs/07_sla_metrics/: KPI_DEFINITION.md  METRICS_COLLECTION_MODEL.md  OLA_DEFINITION.md  (+3 more)
e2e/: package.json  playwright.config.ts  tsconfig.json
frontend/: .env.production  next.config.mjs  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts
k8s/: README.md
monitoring/: prometheus.yml
nginx/: nginx.conf
scripts/: deploy-frontend.sh  generate_env.py  generate_sdk.sh  init-db.sql  seed_data.py  service_manager.py
sdk/: .gitignore  README.md
src/: main.py
systemd/: servicematrix-backend.service  servicematrix-docker.service  servicematrix-frontend.service
terraform/: main.tf  outputs.tf  variables.tf  versions.tf
tests/: conftest.py  conftest_pg.py  test_ai_anomaly.py  test_ai_service.py  test_ai_triage.py  test_ai_triage_api.py  test_ai_triage_gaps.py  test_ai_triage_llm.py  test_api_ai.py  test_api_audit.py  test_api_auth.py  test_api_backup.py  test_api_changes.py  test_api_cmdb.py  test_api_compliance.py  test_api_gateway.py  test_api_health.py  test_api_incidents.py  test_api_integrations.py  test_api_maintenance.py  test_api_problems.py  test_api_reports.py  test_api_search.py  test_api_service_requests.py  test_api_sla.py  test_api_users.py  test_audit_report.py  test_audit_service.py  test_auth.py  test_auto_repair.py  test_cache.py  test_cache_decorator.py  test_celery_tasks.py  test_change_impact.py  test_change_risk_gaps.py  test_change_risk_service.py  test_changes.py  test_cmdb.py  test_cmdb_graph.py  test_cmdb_service.py  (+76 more)
(+349 files in other folders)
